fix mobile sidescroll layout bug

--- a/src/components/Main/Home.css
+++ b/src/components/Main/Home.css
@@ -40,3 +40,9 @@
         column-gap: 2rem;
     }
 }
+
+@media (max-width: 600px) {
+    .story-filters {
+        top: 75px;
+    }
+}
