--- a/src/index.css
+++ b/src/index.css
@@ -83,14 +83,16 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark; */
+  color: var(--neutral);
+  background-color: var(--neutral-100);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow-x: hidden; */
+
 }
 
 a {
@@ -104,9 +106,9 @@ body {
   margin: 120px 0 0 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 300px;
   min-height: 100vh;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
@@ -130,7 +132,7 @@ button {
   font-size: .8em;
   font-weight: 500;
   font-family: inherit;
-  background-color: var(--primary);
+  background-color: var(--primary-225);
   cursor: pointer;
   transition: border-color 0.25s;
   margin: auto;
@@ -147,7 +149,7 @@ button:focus-visible {
   border-bottom: 2px solid var(--neutral-225);
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: var(--neutral);
     background-color: var(--neutral-100);
@@ -155,6 +157,4 @@ button:focus-visible {
   button {
     background-color: var(--primary-225);
   }
-  
-
-}
+} */
